--- a/index.htm
+++ b/index.htm
@@ -29,6 +29,12 @@
     </div>
    </header>
 
+   <form action="" id="search-form">
+<input type="search" placeholder="search here...." name="" id="search-box">
+<label for="search-box" class="fas fa-search"></label>
+<i class="fas fa-times" id="close"></i>
+
+   </form>
 
 
 
