--- a/index.htm
+++ b/index.htm
@@ -290,10 +290,266 @@
             </div>
         </div>
     </section>
-<section class="menu" id="menu">
-       <h3 class="sub-heading">Our Menu</h3>
+    <section class="menu" id="menu">
+        <h3 class="sub-heading">Our Menu</h3>
         <h1 class="heading">Today's speciality</h1>
-</section>
+
+        <div class="box-container">
+            <div class="box">
+                <div class="image">
+                    <img src="image/home-img-2.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Delicious food</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut sequi vero voluptates, optio ex odio
+                        aspernatur illum assumenda amet odit.</p>
+                    <a href="#" class="btn">Add to cart</a>
+                    <span class="pice">$12.99</span>
+                </div>
+            </div>
+
+
+              <div class="box">
+                <div class="image">
+                    <img src="image/home-img-2.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Delicious food</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut sequi vero voluptates, optio ex odio
+                        aspernatur illum assumenda amet odit.</p>
+                    <a href="#" class="btn">Add to cart</a>
+                    <span class="pice">$12.99</span>
+                </div>
+            </div>
+
+            
+                 <div class="box">
+                <div class="image">
+                    <img src="image/home-img-2.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Delicious food</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut sequi vero voluptates, optio ex odio
+                        aspernatur illum assumenda amet odit.</p>
+                    <a href="#" class="btn">Add to cart</a>
+                    <span class="pice">$12.99</span>
+                </div>
+            </div>
+
+                 <div class="box">
+                <div class="image">
+                    <img src="image/home-img-2.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Delicious food</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut sequi vero voluptates, optio ex odio
+                        aspernatur illum assumenda amet odit.</p>
+                    <a href="#" class="btn">Add to cart</a>
+                    <span class="pice">$12.99</span>
+                </div>
+            </div>
+
+                 <div class="box">
+                <div class="image">
+                    <img src="image/home-img-2.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Delicious food</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut sequi vero voluptates, optio ex odio
+                        aspernatur illum assumenda amet odit.</p>
+                    <a href="#" class="btn">Add to cart</a>
+                    <span class="pice">$12.99</span>
+                </div>
+            </div>
+
+                 <div class="box">
+                <div class="image">
+                    <img src="image/home-img-2.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Delicious food</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut sequi vero voluptates, optio ex odio
+                        aspernatur illum assumenda amet odit.</p>
+                    <a href="#" class="btn">Add to cart</a>
+                    <span class="pice">$12.99</span>
+                </div>
+            </div>
+
+                 <div class="box">
+                <div class="image">
+                    <img src="image/home-img-2.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Delicious food</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut sequi vero voluptates, optio ex odio
+                        aspernatur illum assumenda amet odit.</p>
+                    <a href="#" class="btn">Add to cart</a>
+                    <span class="pice">$12.99</span>
+                </div>
+            </div>
+
+                 <div class="box">
+                <div class="image">
+                    <img src="image/home-img-2.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Delicious food</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut sequi vero voluptates, optio ex odio
+                        aspernatur illum assumenda amet odit.</p>
+                    <a href="#" class="btn">Add to cart</a>
+                    <span class="pice">$12.99</span>
+                </div>
+            </div>
+
+                 <div class="box">
+                <div class="image">
+                    <img src="image/home-img-2.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Delicious food</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut sequi vero voluptates, optio ex odio
+                        aspernatur illum assumenda amet odit.</p>
+                    <a href="#" class="btn">Add to cart</a>
+                    <span class="pice">$12.99</span>
+                </div>
+            </div>
+
+                 <div class="box">
+                <div class="image">
+                    <img src="image/home-img-2.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Delicious food</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut sequi vero voluptates, optio ex odio
+                        aspernatur illum assumenda amet odit.</p>
+                    <a href="#" class="btn">Add to cart</a>
+                    <span class="pice">$12.99</span>
+                </div>
+            </div>
+
+                 <div class="box">
+                <div class="image">
+                    <img src="image/home-img-2.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Delicious food</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut sequi vero voluptates, optio ex odio
+                        aspernatur illum assumenda amet odit.</p>
+                    <a href="#" class="btn">Add to cart</a>
+                    <span class="pice">$12.99</span>
+                </div>
+            </div>
+
+                 <div class="box">
+                <div class="image">
+                    <img src="image/home-img-2.jpg" alt="">
+                    <a href="#" class="fas fa-heart"></a>
+                </div>
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Delicious food</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut sequi vero voluptates, optio ex odio
+                        aspernatur illum assumenda amet odit.</p>
+                    <a href="#" class="btn">Add to cart</a>
+                    <span class="pice">$12.99</span>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
